--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 body
 {
-    color: black;
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
@@ -16,6 +17,12 @@ body
     margin: 0;
     padding: 0.5em;
     box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
