--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,12 +11,12 @@ body
 
 #cabecera
 {
-    background: #33A;
-    font-weight: bold;
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: white;
+    font-weight: bold;
     margin: 0;
     padding: 0.5em;
-    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
 }
 
 #cabecera #logo
@@ -44,4 +44,10 @@ body
 #container h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    background: white;
+    padding: 1em;
 }
